# flutter_rs_ffi_barrage

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flutter_rust_bridge.yaml  pubspec.yaml  push.sh
.github/workflows/: dart_flutter_ci.yml  full_build_all_platform.yml  rust_ci.yml
.monkeycode/specs/flutter-rust-bridge-migration/: design.md  requirements.md
example/: README.md  pubspec.yaml
example/android/: README.md
example/android/app/: build.gradle  build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_rs_ffi_barrage_example/: MainActivity.kt
example/assets/: README.md
example/ios/: Podfile  README.md
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: crash_report_page.dart  main.dart
example/linux/: CMakeLists.txt  README.md
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/: Podfile  README.md
example/macos/Runner/: Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt  README.md
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
lib/: flutter_rs_ffi_barrage.dart
lib/src/: emoji_helper.dart  engine.dart  ffi_bind.dart  types.dart  widget.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: common.dart  engine.dart
lib/src/rust/core/: engine.dart
lib/src/rust/text_effect/: effects.dart
lib/src/rust/track/: track_manager.dart
lib/src/rust/utils/: color.dart
native/rs_core/: Cargo.toml  build.rs
native/rs_core/src/: frb_generated.rs  lib.rs
native/rs_core/src/api/: common.rs  engine.rs
native/rs_core/src/core/: engine.rs  mod.rs
native/rs_core/src/emoji/: emoji_manager.rs  mod.rs
native/rs_core/src/ffi/: callbacks.rs  exports.rs  mod.rs
native/rs_core/src/render/: mod.rs  renderer.rs
native/rs_core/src/text_effect/: effects.rs  mod.rs
native/rs_core/src/track/: mod.rs  track_manager.rs
native/rs_core/src/utils/: color.rs  math.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_flutter_rs_ffi_barrage.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_flutter_rs_ffi_barrage.podspec
rust_builder/windows/: CMakeLists.txt
