[package]
name = "flutter_rs_ffi_barrage"
version = "1.0.0"
edition = "2021"
authors = ["HDYOU"]
description = "High-performance Rust barrage/danmaku engine with pure extern \"C\" FFI exports"
license = "MIT"

[lib]
name = "flutter_rs_ffi_barrage"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[dependencies]
parking_lot = "0.12"
crossbeam = "0.8"
bytemuck = { version = "1.16", features = ["derive"] }
lru = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
rand = "0.8"
rusttype = "0.9"
ab_glyph = "0.2"

[dev-dependencies]
criterion = "0.5"

# [[bench]]
# name = "render_bench"
# harness = false
