[package]
name = "flutter_rs_ffi_barrage"
version = "1.0.0"
edition = "2021"
authors = ["HDYOU"]
description = "High-performance Rust barrage/danmaku engine with flutter_rust_bridge bindings"

[lib]
name = "flutter_rs_ffi_barrage"
crate-type = ["staticlib", "cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[dependencies]
flutter_rust_bridge = "=2.12.0"
parking_lot = "0.12"
crossbeam = "0.8"
bytemuck = { version = "1.16", features = ["derive"] }
lru = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
rand = "0.8"
rusttype = "0.9"
ab_glyph = "0.2"

[build-dependencies]
flutter_rust_bridge_codegen = "2"

[dev-dependencies]
criterion = "0.5"

# [[bench]]
# name = "render_bench"
# harness = false

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(frb_expand)"] }
